Fix Search field padding to make text in Firefox readable
See https://phabricator.wikimedia.org/T121101 for screenshot

--- a/browser/css/typeahead.css
+++ b/browser/css/typeahead.css
@@ -3,7 +3,7 @@
 .tt-hint {
   width: 300px;
   height: 25px;
-  padding: 8px 12px;
+  padding: 0px 12px;
   font-size: 14px;
   line-height: 20px;
   border: 2px solid #ccc;
